[package]
name = "9001d"
version = "0.1.0"
authors = ["Philip Trauner <philip.trauner@arztpraxis.io"]

[dependencies]
lazy_static = "1.0.0"

serde = "1.0"
serde_derive = "1.0"
bincode = "0.9.2"
serde_json = "1.0.8"

iron = "0.6"
staticfile = "0.5.0"
mount = "0.4"
bodyparser = "0.8.0"
persistent = "0.4.0"

quick-error = "1.2.1"

config = "0.7.0"

nanomsg = "0.6.2"

rppal = "0.2"

structopt = "0.1.7"
structopt-derive = "0.1.6"

clap = "2.29.0"

rand = "0.4.1"

[target.'cfg(target_os = "linux")'.dependencies]
spidev = "0.3.0"
[dependencies.i2cdev]
git = "https://github.com/rust-embedded/rust-i2cdev.git"
rev = "bc12c4e50b1a61deffcd183e84c3e829a83db3b1"

[lib]
name = "shared"
path = "src/shared.rs"

[[bin]]
name = "9001d"
path = "src/9001d/main.rs"

[[bin]]
name = "gpio_pub"
path = "src/gpio_pub/main.rs"

[[bin]]
name = "mcp3008_pub"
path = "src/mcp3008_pub/main.rs"

[[bin]]
name = "lsm9ds0_pub"
path = "src/lsm9ds0_pub/main.rs"